[US390] Customer list pagination and filters